# SolarYieldLab

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  research-task.md
.github/workflows/: ci.yml  data-refresh.yml  deploy.yml  lint.yml  retrain.yml  tests.yml
.streamlit/: config.toml  secrets.toml.example
app/: Home.py
app/assets/: styles.css
app/components/: downloads.py  forms.py  layout.py  maps.py  sidebar.py  status_cards.py  tables.py
app/pages/: 1_Site_Explorer.py  2_System_Designer.py  3_Yield_Simulator.py  4_Diagnostics.py  5_Research_Dashboard.py
app/services/: app_data_service.py  app_diagnostics_service.py  app_export_service.py  app_simulation_service.py
app/state/: defaults.py  session_state.py
configs/: app.yaml  cams.yaml  era5.yaml  logging.yaml  nasa_power.yaml  nsrdb.yaml  paths.yaml  pvgis.yaml  pvwatts.yaml
configs/experiments/: baseline.yaml  diagnostics_benchmark.yaml  global_screening.yaml
configs/ml/: anomaly_detection.yaml  residual_model.yaml  site_classifier.yaml  surrogate_model.yaml
configs/uq/: monte_carlo.yaml  sensitivity.yaml
docs/api/: endpoints.md  schemas.md
docs/data_dictionary/: sites.md  (+4 more)
scripts/: bootstrap_project.py  build_report.py  generate_demo_data.py  ingest_site_data.py  launch_app.py  register_model.py  run_batch_comparison.py  run_diagnostics.py  run_simulation.py  train_models.py
tests/: conftest.py
(+249 files in other folders)
