[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "solaryieldlab"
version = "0.1.0"
description = "Solar yield simulation, diagnostics, and research platform"
requires-python = ">=3.10"
readme = "README.md"
license = {file = "LICENSE"}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "app*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
